TestSuite/errors/err0274.pas
type TClass = static class
end;

begin
  var o: TClass;
end.